manifests/prod/grafana/EndpointSlice-grafana.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: grafana
  name: grafana
  namespace: grafana
ports:
  - name: http
    port: 3001
    protocol: TCP
