manifests/prod/grafana/Endpoints-grafana.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana
  namespace: grafana
subsets:
  - addresses:
      - ip: 100.83.142.17
    ports:
      - name: http
        port: 3001
