manifests/prod/grafana/Service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3001
  type: ClusterIP
