manifests/prod/grafana/Ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
  name: grafana
  namespace: grafana
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - grafana.k3s.lan
      secretName: grafana-tls
